--- a/hello/src/main/resources/application.properties
+++ b/hello/src/main/resources/application.properties
@@ -1,12 +1,3 @@
-#关闭缓存，即时刷新
-#spring.freemakder.cache=false
-spring.thymeleaf.cache=true
-
-#热部署生效
-spring.devtools.restart.enabled=true
-#设置重启的目录，添加那个目录需要restart
-spring.devtools.restart.additional-paths=src/main/java
-
 #配置端口号
 server.port=8088
 #配置访问路径
@@ -18,3 +9,29 @@ server.session-timeout=60
 #server.address=192.168.120.98
 #tomcat的编码
 server.tomcat.uri-encoding=utf-8
+
+
+
+####################################################
+#
+#freemarker 静态资源配置
+#
+####################################################
+#设定ftl文件路径
+spring.freemarker.template-loader-path=classpath:/templates
+#关闭缓存，即时刷新
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.request-context-attribute=request
+spring.freemarker.suffix=.ftl
+
+
+spring.thymeleaf.cache=true
+#热部署生效
+spring.devtools.restart.enabled=true
+#设置重启的目录，添加那个目录需要restart
+spring.devtools.restart.additional-paths=src/main/java
